[package]
name = "unified-openai-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"
